examples/neg/extern_handled.effekt
interface Foo {
  def foo(): Unit
}

extern {io,async} def bar(): Unit =
  js { do foo() } // ERROR Effect Foo is not allowed in this context
  default { () }